[package]
name = "datspulse"
version = "0.1.0"
edition = "2024"

[dependencies]

# Config
dotenv = "0.15"
toml = "0.9"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bevy
bevy = { version = "0.16" }
bevy-tokio-tasks = "0.16"
bevy_ui = "0.16"
bevy_egui = "0.35"
